<resources>
    <string name="app_name">AppLinkSample</string>
    <string name="app_scheme">applinksample</string>
    <string name="cappta_auth_key">2C1CE88C-6A0C-4FA6-BF2D-519B1DB31DF4</string>

    <!-- activity_main -->

    <string name="button_payment">Realizar Pagamento</string>
    <string name="button_receipt_reprint">Realizar Reimpressão</string>
    <string name="button_payment_reversal">Realizar Estorno de Pagamento</string>
    <string name="button_configuration">Realizar Configuração do PDV</string>

    <!-- activity_payment -->

    <string name="label_payment_amount">Valor do pagamento:</string>
    <string name="label_payment_id">Id do pagamento:</string>
    <string name="label_installments">Qtd. Parcelas:</string>
    <string name="label_installment_type">Tipo de parcelamento:</string>
    <string name="prompt_installment_type">Selecione</string>

    <string name="button_send_credit_payment">Pagamento Crédito</string>
    <string name="button_send_debit_payment">Pagamento Débito</string>

    <!-- activity_payment_reversal -->

    <string name="label_administrative_code">Número de Controle</string>
    <string name="label_administrative_password">Senha administrativa</string>
    <string name="button_send_reversal">Enviar Cancelamento</string>

    <!-- activity_receipt_reprint -->

    <string name="button_reprint_specific">Reimprimir Específico</string>
    <string name="button_reprint_last_receipt">Reimprimir o Último</string>

    <!-- activity_configuration -->

    <string name="label_cnpj">CNPJ</string>
    <string name="label_checkout_number">PDV</string>
    <string name="button_send_configuration">Configurar PDV</string>

    <!-- activity_result -->

    <string name="label_operation_completed">Operação Concluída!</string>

    <!-- generic messages -->

    <string name="label_request_id">Id do requisição:</string>
    <string name="button_back">Voltar</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>

    <!-- activity_tokenization_menu-->

    <string name="button_tokenization">Tokenização</string>
    <string name="button_credit_payment_and_create_card_token">Pagamento com criação de token</string>
    <string name="button_create_card_token">Criação de token</string>
    <string name="button_token_payment">Pagamento com token</string>
    <string name="button_token_payment_reversal">Cancelar transação com token</string>

    <!-- activity_credit_payment_and_create_card_token_result-->
    <string name="label_card_last_four_digits">Final do cartão</string>
    <string name="label_card_brand">Bandeira</string>
    <string name="label_exp_month">Mês expiração</string>
    <string name="label_exp_year">Ano expiração</string>
    <string name="label_customer">Dados portador</string>

    <!--activity_create_card_token-->
    <string name="label_customer_name">Nome do Cliente</string>
    <string name="label_customer_document_type">Tipo do documento</string>
    <string name="label_customer_document">Número do documento</string>
    <string name="label_customer_email">E-mail</string>

    <!--activity_token_payment-->
    <string name="label_card_token">Token do Cartão</string>
    <string name="label_order_id">Código do Pedido</string>
    <string name="label_customer_id">Código do Cliente</string>

    <!--activity_tokenization_result -->
    <string name="label_payment_key">Identificação da transação (Payment key)</string>
    <string name="label_acquirer_name">Adquirente</string>
    <string name="label_acquirer_nsu">NSU Adquirente</string>
    <string name="label_card_brand_name">Bandeira</string>
    <string name="label_status">Status</string>

    <!-- Execute Operation Button-->
    <string name="execute_operation_button">Executar Operação</string>

</resources>
