<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tols="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tols:context="com.cappta.applinksample.activities.PaymentWithTokenCreationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_payment_id"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/payment_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="number"
        android:text="123456" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_payment_amount"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/paymentAmount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_installments"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/installments"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_installment_type"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/installment_type"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:prompt="@string/prompt_installment_type" />

    <Button
        android:id="@+id/button_send_credit_payment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/button_send_credit_payment" />

    <Button
        android:id="@+id/button_send_debit_payment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/button_send_debit_payment" />


</LinearLayout>
