<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_operation_completed"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/label_payment_key" />

    <TextView
        android:id="@+id/payment_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/label_acquirer_name" />

    <TextView
        android:id="@+id/acquirer_name"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/label_acquirer_nsu" />

    <TextView
        android:id="@+id/acquirer_unique_sequential_number"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/label_card_brand_name" />

    <TextView
        android:id="@+id/card_brand_name"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/label_status" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/label_payment_amount" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back" />

</LinearLayout>