<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cappta.applinksample.activities.MainActivity">

    <Button
        android:id="@+id/button_payment"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/button_payment" />

    <Button
        android:id="@+id/button_receipt_reprint"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/button_receipt_reprint" />

    <Button
        android:id="@+id/button_payment_reversal"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/button_payment_reversal" />

    <Button
        android:id="@+id/button_configuration"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/button_configuration" />

</LinearLayout>