<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cappta.applinksample.activities.ConfigurationActivity">

    <EditText
        android:id="@+id/cnpj"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/label_cnpj"
        android:inputType="number" />

    <EditText
        android:id="@+id/checkoutNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/label_checkout_number"
        android:inputType="number" />

    <Button
        android:id="@+id/button_send_configuration"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/button_send_configuration" />

</LinearLayout>
