<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment_reversal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cappta.applinksample.activities.PaymentReversalActivity">
    <EditText
        android:id="@+id/administrative_code"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/label_administrative_code" />

    <EditText
        android:id="@+id/administrative_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/label_administrative_password"/>

    <Button
        android:id="@+id/button_send_reversal"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/button_send_reversal" />
</LinearLayout>
